--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,6 @@
 !!!
 html
   head
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    title Poang
+    link(rel='stylesheet', type='text/css', href='/stylesheets/journal.min.css')
+    title CrowdBotBlock
   body!= body
