--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -16,13 +16,23 @@ div.container
       h1 CrowdBotBlock
       h3 Drag and drop to control a robot over the web.
   .row
-    .span1
-    .span5
+    .span4
       h3 Arduino
       p Arduino is an open-source hardware controller which can make tons of robots. Right now we have a simple one that you can control over the web.
+      a(href="http://arduino.cc") Arduino Project
       img(src="http://p.twimg.com/AgwrF22CMAA5HoQ.jpg")
-    .span5
+    .span4
       h3 Blockly
       p The drag-and-drop code editor powering CrowdBotBlock is based on Blockly, an open-source project from Google.
       a(href="http://code.google.com/p/blockly/") Learn more
-    .span1
+      img(src="http://p.twimg.com/AzkUk0jCYAAUvT7.png")
+    .span4
+      h3 node.js and johnny-five
+      p Node.js is a platform for writing a web server in JavaScript.
+      p Rick Waldron's johnny-five module lets a node.js server control an attached Arduino.
+
+  .row
+    .span4
+    .span4
+      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png")
+    .span4
