--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -29,10 +29,9 @@ div.container
     .span4
       h3 node.js and johnny-five
       p Node.js is a platform for writing a web server in JavaScript.
-      p Rick Waldron's johnny-five module lets a node.js server control an attached Arduino.
+      p Rick Waldron's johnny-five module lets you control an attached Arduino from node.js
+      img(src="http://nodejs.org/images/logos/nodejs-green.png")
 
   .row
-    .span4
-    .span4
-      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png")
-    .span4
+    .span4(style="text-align:center;")
+      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", width="300", style="margin-left:auto;margin-right:auto;")
