--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -7,8 +7,8 @@ div.navbar.navbar-fixed-top
         span.icon-bar
     
       a.brand(href="/") CrowdBotBlock
-      a(href="/blockly/demos/code/index.html") Code Editor
-      a(href="http://ustream.tv/channel/crowdbot") Livestream
+      a.brand(href="/blockly/demos/code/index.html") Code Editor
+      a.brand(href="http://ustream.tv/channel/crowdbot") Livestream
 
 div.container
   .row
@@ -19,19 +19,24 @@ div.container
     .span4
       h3 Arduino
       p Arduino is an open-source hardware controller which can make tons of robots. Right now we have a simple one that you can control over the web.
-      a(href="http://arduino.cc") Arduino Project
+      a(href="http://arduino.cc", style="color:blue;") Arduino Project
       img(src="http://p.twimg.com/AgwrF22CMAA5HoQ.jpg")
     .span4
       h3 Blockly
       p The drag-and-drop code editor powering CrowdBotBlock is based on Blockly, an open-source project from Google.
-      a(href="http://code.google.com/p/blockly/") Learn more
+      a(href="http://code.google.com/p/blockly/", style="color:blue;") Learn more
+      br
       img(src="http://p.twimg.com/AzkUk0jCYAAUvT7.png")
     .span4
       h3 node.js and johnny-five
       p Node.js is a platform for writing a web server in JavaScript.
       p Rick Waldron's johnny-five module lets you control an attached Arduino from node.js
-      img(src="http://nodejs.org/images/logos/nodejs-green.png")
+      br
+      img(src="http://i.imgur.com/Wb3Xn.png")
+
+  br
+  br
 
   .row
-    .span4(style="text-align:center;")
-      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", width="300", style="margin-left:auto;margin-right:auto;")
+    .span12(style="text-align:center;")
+      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
