--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,4 +1,4 @@
-div.navbar.navbar-fixed-top
+div.navbar
   .navbar-inner
     .container
       a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
