--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -1,3 +1,6 @@
+script(src="/socket.io/socket.io.js", type="text/javascript")
+script(src="/scripts/livestream.js", type="text/javascript")
+
 div.navbar
   .navbar-inner
     .container
@@ -12,10 +15,10 @@ div.navbar
 
 div.container
   .row
-    .span6
+    .span8
       h3 Watch CrowdBot
       iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
-    .span6
+    .span4
       div#livecode
         p Code will go here
 
