--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -8,7 +8,7 @@ div.navbar
     
       a.brand(href="/") CrowdBotBlock
       a.brand(href="/blockly/demos/code/index.html") Code Editor
-      a.brand(href="http://ustream.tv/channel/crowdbot") Livestream
+      a.brand(href="/livestream") Livestream
 
 div.container
   .row
