--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -1,4 +1,8 @@
 script(src="/socket.io/socket.io.js", type="text/javascript")
+script(src="/scripts/shCore.js", type="text/javascript")
+script(src="/scripts/shBrushJScript.js", type="text/javascript")
+link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
+link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
 script(src="/scripts/livestream.js", type="text/javascript")
 
 div.navbar
@@ -19,8 +23,10 @@ div.container
       h3 Watch CrowdBot
       iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
     .span4
-      div#livecode
-        p Code will go here
+      h4 Current Program
+      pre#livecode(class="brush: js") #{js}
+      script(type="text/javascript") SyntaxHighlighter.all();
+      p Updated in realtime by socket.io
 
   br
   br
