update top of page

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -6,9 +6,9 @@ div.navbar
         span.icon-bar
         span.icon-bar
     
-      a.brand(href="/") CrowdBotBlock
-      a.brand(href="/blockly/demos/code/index.html") Code Editor
-      a.brand(href="/livestream") Livestream
+      a.brand(href="/") CrowdBot Block
+      a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
+      a.brand(href="/livestream", style="text-transform:none;") Livestream
 
 div.container
   .row
