--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -22,6 +22,9 @@ div.container
     .span7
       h3 Watch CrowdBot
       iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
+      br
+      br
+      ul#livedata(style="border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
     .span5
       h4 Current Program
       div#codecontainer
