--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -23,8 +23,8 @@ div.container
       h3 Watch CrowdBot
       iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
       br
-      br
-      ul#livedata(style="border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
+      h3 Data Stream
+      ul#livedata(style="margin-left:-30px;border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
     .span5
       h4 Current Program
       div#codecontainer
