--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -4,6 +4,7 @@ script(src="/scripts/shBrushJScript.js", type="text/javascript")
 link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
 link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
 script(src="/scripts/livestream.js", type="text/javascript")
+script(type="text/javascript") seeifwait("#{program.id}");
 
 div.navbar
   .navbar-inner
@@ -26,10 +27,21 @@ div.container
       h3 Data Stream
       ul#livedata(style="margin-left:-30px;border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
     .span5
+      div#wait(style="display:none;padding:10px;background-color:#ffffaa;")
+        h4 Your program is in the cue
+        p Please wait.
+        a#myblockview(target="_blank") See Blocks 
       h4 Current Program
       div#codecontainer
-        pre#livecode(class="brush: js") #{js}
-      p Updated in realtime by socket.io
+        pre#livecode(class="brush: js") #{program.js}
+
+      a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank") See Blocks
+      p
+        span Updated in realtime by&nbsp;
+        a(href="http://socket.io" target="_blank") socket.io
+      p
+        span Code view by&nbsp;
+        a(href="http://alexgorbatchev.com/SyntaxHighlighter/", target="_blank") Syntax Highlighter
 
   br
   br
