--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -3,8 +3,8 @@ script(src="/scripts/shCore.js", type="text/javascript")
 script(src="/scripts/shBrushJScript.js", type="text/javascript")
 link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
 link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
+script(type="text/javascript") var nowid = "#{program.id}";
 script(src="/scripts/livestream.js", type="text/javascript")
-script(type="text/javascript") seeifwait("#{program.id}");
 
 div.navbar
   .navbar-inner
