add waiting block to cue view

--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -38,7 +38,7 @@ div.container
       a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank") See Blocks
       p
         span Updated in realtime by&nbsp;
-        a(href="http://socket.io" target="_blank") socket.io
+        a(href="http://socket.io", target="_blank") socket.io
       p
         span Code view by&nbsp;
         a(href="http://alexgorbatchev.com/SyntaxHighlighter/", target="_blank") Syntax Highlighter
