add waiting block to cue view

--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -30,7 +30,7 @@ div.container
       div#wait(style="display:none;padding:10px;background-color:#ffffaa;")
         h4 Your program is in the cue
         p Please wait.
-        a#myblockview(target="_blank") See Blocks 
+        a#myblockview(href="", target="_blank") See Blocks 
       h4 Current Program
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
