--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -31,7 +31,7 @@ div.container
           p Please wait.
         iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px; height:20px;")
         a#myblockview(href="", target="_blank", style="color:blue;") See Blocks 
-      h4#codename Current Program
+      h4#codename Program: #{program.name}
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
 
