--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -35,7 +35,7 @@ div.container
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
 
-      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Tweet%20this%20Program", style="width:130px; height:20px;")
+      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px; height:20px;")
       br
       a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;") See Blocks
       p
