--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -18,6 +18,10 @@ div.navbar
 
 div.container
   .row
+    .span12(style="background-color:lightblue;text-align:center;")
+      a(href="https://mozillaignite.org/ideas/111/", target="_blank")
+        Please support CrowdBot's entry in the Mozilla Ignite Competition!
+  .row
     .span7
       h3 Watch CrowdBot
       iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
@@ -30,21 +34,26 @@ div.container
           h4 Your program is in the cue
           p Please wait.
         iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px; height:20px;")
-        a#myblockview(href="", target="_blank", style="color:blue;") See Blocks 
+        a#myblockview(href="", target="_blank", style="color:blue;")
+          img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
+          br
+          See Blocks
       h4#codename Program: #{program.name}
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
 
       iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px; height:20px;")
       br
-      a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;") See Blocks
+      a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;")
+        img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
+        br
+        See Blocks
       p
         span Updated in realtime by&nbsp;
         a(href="http://socket.io", target="_blank") socket.io
       p
         span Code view by&nbsp;
         a(href="http://alexgorbatchev.com/SyntaxHighlighter/", target="_blank") Syntax Highlighter
-
   br
   br
 
