--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -29,26 +29,20 @@ div.container
         #wait-inner
           h4 Your program is in the cue
           p Please wait.
-        div.span6(style="background-color:#fff;")
-          a#myblockview(href="", target="_blank", style="color:blue;")
-            img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
-            br
-            span View Blocks
-        div.span6
-          iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px; height:20px;")
+        iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px; height:20px;")
+        br
+        a#myblockview(href="", target="_blank", style="color:blue;vertical-align:middle;")
+          img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
+          span View Blocks
       h4#codename Program: #{program.name}
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
-      
-      div.span6(style="background-color:#fff;")
-        a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;")
-          img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
-          br
-          span View Blocks
-      div.span6
-        iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px; height:20px;")
+
+      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px; height:20px;")
       br
-      br
+      a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;")
+        img(src='http://i.imgur.com/tQRIi.png', width='120', title='See Blocks', alt='See Blocks')
+        span View Blocks
       p
         span Updated in realtime by&nbsp;
         a(href="http://socket.io", target="_blank") socket.io
