--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -29,20 +29,17 @@ div.container
         #wait-inner
           h4 Your program is in the cue
           p Please wait.
+        iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px;height:20px;float:right;")
         a#myblockview(href="", target="_blank", style="color:blue;vertical-align:middle;")
           img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
           span View Blocks
-        br
-        iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px; height:20px;")
       h4#codename Program: #{program.name}
       div#codecontainer
         pre#livecode(class="brush: js") #{program.js}
-
+      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px;height:20px;float:right;")
       a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;")
         img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
         span View Blocks
-      br
-      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px; height:20px;")
       p
         span Updated in realtime by&nbsp;
         a(href="http://socket.io", target="_blank") socket.io
