attempt sensor read

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -13,7 +13,7 @@ div.navbar
 div.container
   .row
     .hero-unit
-      div(style="float:right;")
+      div(style="float:right;margin-top:-55px;")
         h4 Example Code
         table
           tr
@@ -31,6 +31,8 @@ div.container
             td
               a(href='/blockly/demos/code/index.html')
                 strong Read Sensor
+                br
+                img(src='http://i.imgur.com/ZhiG4.png', width='100')
             td
               a(href='/blockly/demos/code/index.html?id=502ed0adf123840200000009')
                 strong Light Show
