--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -9,12 +9,13 @@ div.navbar
       a.brand(href="/") CrowdBot Block
       a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
       a.brand(href="/livestream", style="text-transform:none;") Livestream
+      a.brand(href="https://mozillaignite.org/ideas/111/", style="text-transform:none;color:orange;") Support Our Contest!
 
 div.container
   .row
     .hero-unit
       div(style="float:right;margin-top:-55px;")
-        h4 Example Code
+        h4 Start Now
         table
           tr
             td
@@ -56,7 +57,7 @@ div.container
       h3 node.js and johnny-five
       p Node.js is a platform for writing a web server in JavaScript.
       p Rick Waldron's johnny-five module lets you control an attached Arduino from node.js
-      a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ") johnny-five demo
+      a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ", style="color:blue;") johnny-five demo
       br
       img(src="http://i.imgur.com/Wb3Xn.png")
 
