--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -6,10 +6,9 @@ div.navbar
         span.icon-bar
         span.icon-bar
     
-      a.brand(href="/") CrowdBot Block
       a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
       a.brand(href="/livestream", style="text-transform:none;") Livestream
-      a.brand(href="https://mozillaignite.org/ideas/111/", style="text-transform:none;color:orange;") Support Our Contest!
+      a.brand(href="https://mozillaignite.org/ideas/111/", style="text-transform:none;color:orange;") Support CrowdBot on Mozilla Ignite!
 
 div.container
   .row
