--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -29,7 +29,7 @@ div.container
                 img(src='http://i.imgur.com/K5M5x.png', width='100')
           tr
             td
-              a(href='/blockly/demos/code/index.html')
+              a(href='/blockly/demos/code/index.html?id=502ede719c3b1e0200000001')
                 strong Read Sensor
                 br
                 img(src='http://i.imgur.com/ZhiG4.png', width='100')
