--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -13,7 +13,7 @@ div.navbar
 div.container
   .row
     .span8
-      .hero-unit
+      .hero-unit(style="rgb(124,192,59)")
         h1 CrowdBot
         h3 Drag and drop code into a livestreamed robot.
       div
