--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -13,32 +13,33 @@ div.navbar
 div.container
   .row
     .span8
-      .hero-unit(style="rgb(124,192,59)")
+      .hero-unit(style="background-color:rgb(124,192,59)")
         h1 CrowdBot
         h3 Drag and drop code into a livestreamed robot.
       div
-        h4 Start Now
+        h3 Start Now
         a(href='/blockly/demos/code/index.html?id=502ff900c4b70b0200000001')
-          strong Blink LEDs
+          h4 Blink LEDs
           br
           img(src='http://i.imgur.com/4ulgL.png')
         hr
         a(href='/blockly/demos/code/index.html?id=502ff97bc4b70b0200000002')
-          strong Move Motor
+          h4 Move Motor
           br
           img(src='http://i.imgur.com/EJtiF.png')
         hr
         a(href='/blockly/demos/code/index.html?id=502ff9d1c4b70b0200000003')
-          strong Read Sensor
+          h4 Read Sensor
           br
           img(src='http://i.imgur.com/OS3sz.png')
         hr
         a(href='/blockly/demos/code/index.html?id=502ffa46c4b70b0200000005')
-          strong Light Show
+          h4 Light Show
           br
           img(src='http://i.imgur.com/uYafv.png')
 
     .span4
+      h2 Built on Open Source
       h3 Arduino
       p Arduino is an open-source hardware controller which can make tons of robots. Right now we have a simple one that you can control over the web.
       a(href="http://arduino.cc", style="color:blue;") Arduino Project
