add future goals

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -13,7 +13,7 @@ div.navbar
 div.container
   .row
     .span8
-      .hero-unit(style="background-color:rgb(124,192,59)")
+      .hero-unit(style="background-color:#C2F23C;")
         h1 CrowdBot
         h3 Drag and drop code into a livestreamed robot.
       div
@@ -59,6 +59,12 @@ div.container
       a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ", style="color:blue;") johnny-five demo
       br
       img(src="http://i.imgur.com/Wb3Xn.png")
+      
+      h2 Future Goals
+      ul
+        li Stream a mobile robot
+        li Open CrowdBot to more Makers and their robots
+        li Browse archived programs and datastreams returned
 
   br
   br
