add future goals

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -17,7 +17,7 @@ div.container
         h1 CrowdBot
         h3 Drag and drop code into a livestreamed robot.
       div
-        h3 Start Now
+        h3 Pick a program to start:
         a(href='/blockly/demos/code/index.html?id=502ff900c4b70b0200000001')
           h4 Blink LEDs
           br
