homepage and analytics

--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -55,13 +55,19 @@ div.container
 
       h3 node.js and johnny-five
       p Node.js is a platform for writing a web server in JavaScript.
-      p Rick Waldron's johnny-five module lets you control an attached Arduino from node.js
+      p
+        span Rick Waldron's&nbsp;
+        a(href="https://github.com/rwldrn/johnny-five") johnny-five module
+        span &nbsp;lets you control an attached Arduino from node.js
+      p It's how your code actually controls the Arduino and makes this all possible!
       a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ", style="color:blue;") johnny-five demo
       br
       img(src="http://i.imgur.com/Wb3Xn.png")
+      br
+      img(src="https://github.com/rwldrn/johnny-five/raw/master/assets/sgier-johnny-five.png")
       
       h2 Future Goals
-      ul
+      ul(style="font-size:16pt;")
         li Stream a mobile robot
         li Open CrowdBot to more Makers and their robots
         li Browse archived programs and datastreams returned
@@ -70,4 +76,8 @@ div.container
 
   .row
     .span12(style="text-align:center;")
-      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
+      a(href="http://codeforamerica.org")
+        img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
+      br
+      br
+      script(type="text/javascript") var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34200948-1']); _gaq.push(['_trackPageview']); (function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
