--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -64,7 +64,7 @@ div.container
       br
       img(src="http://i.imgur.com/Wb3Xn.png")
       br
-      img(src="https://github.com/rwldrn/johnny-five/raw/master/assets/sgier-johnny-five.png")
+      img(src="https://github.com/rwldrn/johnny-five/raw/master/assets/sgier-johnny-five.png", style="width:70%;")
       
       h2 Future Goals
       ul(style="font-size:16pt;")
