--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -1,6 +1,7 @@
 script(src="/socket.io/socket.io.js", type="text/javascript")
 script(src="/scripts/shCore.js", type="text/javascript")
 script(src="/scripts/shBrushJScript.js", type="text/javascript")
+script(src="/scripts/shBrushCpp.js", type="text/javascript")
 link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
 link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
 
@@ -34,8 +35,16 @@ div.container
           img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
           span View Blocks
       h4#codename Program: #{program.name}
-      div#codecontainer
-        pre#livecode(class="brush: js") #{program.js}
+      -if(#{program.js})
+        div#codecontainer
+          pre#livecode(class="brush: js") #{program.js}
+        div#wiringcontainer(style="display:none;")
+          pre#livewiringcode(class="brush: c")
+      -else
+        div#codecontainer(style="display:none;")
+          pre#livecode(class="brush: js")
+        div#wiringcontainer
+          pre#livewiringcode(class="brush: c") #{program.wiring}
       iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px;height:20px;float:right;")
       a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;")
         img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
