test adding textcode page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,2 @@
 !!!
-html
-  head
-    link(rel='stylesheet', type='text/css', href='/stylesheets/journal.min.css')
-    title CrowdBotBlock
-  body!= body
+html != body
