--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,84 +1,86 @@
-div.navbar
-  .navbar-inner
-    .container
-      a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+head
+  title CrowdBot Homepage
+body
+  div.navbar
+    .navbar-inner
+      .container
+        a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
     
-      a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
-      a.brand(href="/livestream", style="text-transform:none;") Livestream
+        a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
+        a.brand(href="/livestream", style="text-transform:none;") Livestream
 
-div.container
-  .row
-    .span8
-      .hero-unit(style="background-color:#C2F23C;")
-        h1 CrowdBot
-        h3 Drag and drop code into a livestreamed robot.
-      div
-        h3 Pick a program to start:
-        a(href='/blockly/demos/code/index.html?id=502ff900c4b70b0200000001')
-          h4 Blink LEDs
-          br
-          img(src='http://i.imgur.com/4ulgL.png')
+  div.container
+    .row
+      .span8
+        .hero-unit(style="background-color:#C2F23C;")
+          h1 CrowdBot
+          h3 Drag and drop code into a livestreamed robot.
+        div
+          h3 Pick a program to start:
+          a(href='/blockly/demos/code/index.html?id=502ff900c4b70b0200000001')
+            h4 Blink LEDs
+            br
+            img(src='http://i.imgur.com/4ulgL.png')
+          hr
+          a(href='/blockly/demos/code/index.html?id=502ff97bc4b70b0200000002')
+            h4 Move Motor
+            br
+            img(src='http://i.imgur.com/EJtiF.png')
+          hr
+          a(href='/blockly/demos/code/index.html?id=502ff9d1c4b70b0200000003')
+            h4 Read Sensor
+            br
+            img(src='http://i.imgur.com/OS3sz.png')
+          hr
+          a(href='/blockly/demos/code/index.html?id=502ffa46c4b70b0200000005')
+            h4 Light Show
+            br
+            img(src='http://i.imgur.com/uYafv.png')
+
+      .span4
+        h2 Built on Open Source
+        h3 Arduino
+        p Arduino is an open-source hardware controller which can make tons of robots. Right now we have a simple one that you can control over the web.
+        a(href="http://arduino.cc", style="color:blue;") Arduino Project
+        img(src="http://p.twimg.com/AgwrF22CMAA5HoQ.jpg")
         hr
-        a(href='/blockly/demos/code/index.html?id=502ff97bc4b70b0200000002')
-          h4 Move Motor
-          br
-          img(src='http://i.imgur.com/EJtiF.png')
+
+        h3 Blockly
+        p The drag-and-drop code editor powering CrowdBotBlock is based on Blockly, an open-source project from Google.
+        a(href="http://code.google.com/p/blockly/", style="color:blue;") Blockly Project
+        br
+        img(src="http://p.twimg.com/AzkUk0jCYAAUvT7.png")
         hr
-        a(href='/blockly/demos/code/index.html?id=502ff9d1c4b70b0200000003')
-          h4 Read Sensor
-          br
-          img(src='http://i.imgur.com/OS3sz.png')
-        hr
-        a(href='/blockly/demos/code/index.html?id=502ffa46c4b70b0200000005')
-          h4 Light Show
-          br
-          img(src='http://i.imgur.com/uYafv.png')
 
-    .span4
-      h2 Built on Open Source
-      h3 Arduino
-      p Arduino is an open-source hardware controller which can make tons of robots. Right now we have a simple one that you can control over the web.
-      a(href="http://arduino.cc", style="color:blue;") Arduino Project
-      img(src="http://p.twimg.com/AgwrF22CMAA5HoQ.jpg")
-      hr
-
-      h3 Blockly
-      p The drag-and-drop code editor powering CrowdBotBlock is based on Blockly, an open-source project from Google.
-      a(href="http://code.google.com/p/blockly/", style="color:blue;") Blockly Project
-      br
-      img(src="http://p.twimg.com/AzkUk0jCYAAUvT7.png")
-      hr
-
-      h3 node.js and johnny-five
-      p Node.js is a platform for writing a web server in JavaScript.
-      p
-        span Rick Waldron's&nbsp;
-        a(href="https://github.com/rwldrn/johnny-five") johnny-five module
-        span &nbsp;lets you control an attached Arduino from node.js
-      p It's how your code actually controls the Arduino and makes this all possible!
-      a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ", style="color:blue;") johnny-five demo
-      br
-      img(src="http://i.imgur.com/Wb3Xn.png")
-      br
-      img(src="https://github.com/rwldrn/johnny-five/raw/master/assets/sgier-johnny-five.png", style="width:70%;")
+        h3 node.js and johnny-five
+        p Node.js is a platform for writing a web server in JavaScript.
+        p
+          span Rick Waldron's&nbsp;
+          a(href="https://github.com/rwldrn/johnny-five") johnny-five module
+          span &nbsp;lets you control an attached Arduino from node.js
+        p It's how your code actually controls the Arduino and makes this all possible!
+        a(href="http://www.youtube.com/watch?v=jf-cEB3U2UQ", style="color:blue;") johnny-five demo
+        br
+        img(src="http://i.imgur.com/Wb3Xn.png")
+        br
+        img(src="https://github.com/rwldrn/johnny-five/raw/master/assets/sgier-johnny-five.png", style="width:70%;")
       
-      h2 Future Goals
-      ul(style="font-size:16pt;")
-        li Stream a mobile robot
+        h2 Future Goals
+        ul(style="font-size:16pt;")
+          li Stream a mobile robot
+          br
+          li Open CrowdBot to more Makers and their robots
+          br
+          li Browse archived programs and datastreams returned
+    br
+    br
+    .row
+      .span12(style="text-align:center;")
+        a(href="http://codeforamerica.org")
+          img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
         br
-        li Open CrowdBot to more Makers and their robots
         br
-        li Browse archived programs and datastreams returned
-  br
-  br
-
-  .row
-    .span12(style="text-align:center;")
-      a(href="http://codeforamerica.org")
-        img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
-      br
-      br
-      script(type="text/javascript") var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34200948-1']); _gaq.push(['_trackPageview']); (function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
+        script(type="text/javascript") var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34200948-1']); _gaq.push(['_trackPageview']); (function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
