--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -1,72 +1,75 @@
-script(src="/socket.io/socket.io.js", type="text/javascript")
-script(src="/scripts/shCore.js", type="text/javascript")
-script(src="/scripts/shBrushJScript.js", type="text/javascript")
-script(src="/scripts/shBrushCpp.js", type="text/javascript")
-link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
-link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
+head
+  title CrowdBot Livestream
+  script(src="/socket.io/socket.io.js", type="text/javascript")
+  script(src="/scripts/shCore.js", type="text/javascript")
+  script(src="/scripts/shBrushJScript.js", type="text/javascript")
+  script(src="/scripts/shBrushCpp.js", type="text/javascript")
+  link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
+  link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
 
-div.navbar
-  .navbar-inner
-    .container
-      a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
+body
+  div.navbar
+    .navbar-inner
+      .container
+        a.btn.btn-navbar(data-toggle="collapse", data-target=".nav-collapse")
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
     
-      a.brand(href="/") CrowdBot Block
-      a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
-      a.brand(href="/livestream", style="text-transform:none;") Livestream
+        a.brand(href="/") CrowdBot Block
+        a.brand(href="/blockly/demos/code/index.html", style="text-transform:none;") Code Editor
+        a.brand(href="/livestream", style="text-transform:none;") Livestream
 
-div.container
-  .row
-    .span7
-      h3 Watch CrowdBot
-      iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
-      br
-      h3 Data Stream
-      ul#livedata(style="margin-left:-30px;border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
-    .span5
-      #wait(style="display:none;padding:10px;background-color:#ffffaa;")
-        #wait-inner
-          h4 Your program is in the cue
-          p Please wait.
-        iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px;height:20px;float:right;")
-        a#myblockview(href="", target="_blank", style="color:blue;vertical-align:middle;")
-          img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
-          span View Blocks
-      h4#codename Program: #{program.name}
-      - if (program.js != 0)
-        div#codecontainer
-          pre#livecode(class="brush: js") #{program.js}
-        div#wiringcontainer(style="display:none;")
-          pre#livewiringcode(class="brush: c")
-      - else
-        div#codecontainer(style="display:none;")
-          pre#livecode(class="brush: js")
-        div#wiringcontainer
-          pre#livewiringcode(class="brush: c") #{program.wiring}
-      iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px;height:20px;float:right;")
-      - if (program.js != 0)
-        a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;")
-          img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
-          span View Blocks
-      - else
-        a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;display:none;")
-          img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
-          span View Blocks
-      p
-        span Updated in realtime by&nbsp;
-        a(href="http://socket.io", target="_blank") socket.io
-      p
-        span Code view by&nbsp;
-        a(href="http://alexgorbatchev.com/SyntaxHighlighter/", target="_blank") Syntax Highlighter
-  br
-  br
+  div.container
+    .row
+      .span7
+        h3 Watch CrowdBot
+        iframe(src="http://www.ustream.tv/embed/9893969", width="500", height="350", scrolling="no", frameborder="0", style="border: 0px none transparent;")
+        br
+        h3 Data Stream
+        ul#livedata(style="margin-left:-30px;border:1px solid #000;padding:6px;height:400px;overflow-y:scroll;")
+      .span5
+        #wait(style="display:none;padding:10px;background-color:#ffffaa;")
+          #wait-inner
+            h4 Your program is in the cue
+            p Please wait.
+          iframe#myblocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html", style="width:130px;height:20px;float:right;")
+          a#myblockview(href="", target="_blank", style="color:blue;vertical-align:middle;")
+            img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
+            span View Blocks
+        h4#codename Program: #{program.name}
+        - if (program.js != 0)
+          div#codecontainer
+            pre#livecode(class="brush: js") #{program.js}
+          div#wiringcontainer(style="display:none;")
+            pre#livewiringcode(class="brush: c")
+        - else
+          div#codecontainer(style="display:none;")
+            pre#livecode(class="brush: js")
+          div#wiringcontainer
+            pre#livewiringcode(class="brush: c") #{program.wiring}
+        iframe#blocktweet(allowtransparency="true", frameborder="0", scrolling="no", src="//platform.twitter.com/widgets/tweet_button.html?text=Drop%20code%20into%20a%20livestreamed%20Arduino%20robot!%20", style="width:130px;height:20px;float:right;")
+        - if (program.js != 0)
+          a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;")
+            img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
+            span View Blocks
+        - else
+          a#blockview(href="/blockly/demos/code/index.html?id=#{program.id}", target="_blank", style="color:blue;vertical-align:middle;display:none;")
+            img(src='http://i.imgur.com/tQRIi.png', width='80', title='See Blocks', alt='See Blocks')
+            span View Blocks
+        p
+          span Updated in realtime by&nbsp;
+          a(href="http://socket.io", target="_blank") socket.io
+        p
+          span Code view by&nbsp;
+          a(href="http://alexgorbatchev.com/SyntaxHighlighter/", target="_blank") Syntax Highlighter
+    br
+    br
 
-  .row
-    .span12(style="text-align:center;")
-      img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
+    .row
+      .span12(style="text-align:center;")
+        img(src="http://codeforamerica.org/wp-content/uploads/2011/12/CfA_logo-300x120.png", style="width:200px;margin-left:auto;margin-right:auto;")
 
-script(type="text/javascript") var nowid = "#{program.id}";
-script(src="/scripts/livestream.js", type="text/javascript")
-script(type="text/javascript") var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34200948-1']); _gaq.push(['_trackPageview']); (function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
+  script(type="text/javascript") var nowid = "#{program.id}";
+  script(src="/scripts/livestream.js", type="text/javascript")
+  script(type="text/javascript") var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34200948-1']); _gaq.push(['_trackPageview']); (function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();
