--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,5 +1,6 @@
 head
   title CrowdBot Homepage
+  link(type="text/css", rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css")
 body
   div.navbar
     .navbar-inner
