--- a/views/livestream.jade
+++ b/views/livestream.jade
@@ -4,7 +4,7 @@ head
   script(src="/scripts/shCore.js", type="text/javascript")
   script(src="/scripts/shBrushJScript.js", type="text/javascript")
   script(src="/scripts/shBrushCpp.js", type="text/javascript")
-  link(type="text/css", rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css")
+  link(type="text/css", rel="stylesheet", href="/stylesheets/journal.min.css")
   link(rel='stylesheet', type='text/css', href='/stylesheets/shCore.css')
   link(rel='stylesheet', type='text/css', href='/stylesheets/shThemeDefault.css')
 
