--- a/views/textcode.jade
+++ b/views/textcode.jade
@@ -3,7 +3,7 @@ head
   script(type="text/javascript", src="/scripts/codemirror.js")
   script(type="text/javascript", src="/scripts/clike.js")
   script(type="text/javascript", src="/scripts/textcode.js")
-  link(type="text/css", rel="stylesheet", href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css")
+  link(type="text/css", rel="stylesheet", href="/stylesheets/journal.min.css")
   link(type="text/css", rel="stylesheet", href="/stylesheets/textcode.css")
   link(type="text/css", rel="stylesheet", href="/stylesheets/codemirror.css")
 
